# MindvisionDriver

./: README.md
ArmorDetect_MindVision/: CMakeLists.txt  Wed Oct  4 11:24:07 2023.avi  armoir_detect.cpp  armor_detect.h  main.cpp
ArmorDetect_MindVision/sensors/: CMakeLists.txt  CameraDefine.h  mindvision.cpp  mindvision.h  save_video.cpp  save_video.h
rules/: .creat_ttyudev.sh.swp  create_mvudev.sh  mvusb.rules
